# laundry-management-system

./: .gitignore  README.md  package-lock.json  tailwind.config.ts
StaffClient/: .env  .env.example  app.json  package-lock.json  package.json  update_ip.sh
StaffClient/app/: +not-found.tsx  _layout.tsx
StaffClient/app/(tabs)/: Collect.tsx  Delivered.tsx  Ready.tsx  Wash.tsx  _layout.tsx  collect.tsx  ready.tsx  wash.tsx
db_container_linux/: docker-compose.yml  lms.sql
db_container_windows/: docker-compose.yml  init.sql
server/: app.py  db.py  db_linux.py  db_windows.py  main.py  pyproject.toml
server/api/: __init__.py  analytics.py  auth.py  status.py
staff_client/: README.md  pubspec.yaml
staff_client/.dart_tool/: package_config.json  package_config_subset
staff_client/android/app/: build.gradle
staff_client/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
staff_client/ios/Runner/: Info.plist
staff_client/ios/Runner.xcodeproj/: project.pbxproj
staff_client/linux/: CMakeLists.txt  my_application.cc
staff_client/macos/Runner.xcodeproj/: project.pbxproj
staff_client/web/: index.html
staff_client/windows/runner/: Runner.rc
student_client/: package.json
web-client/: laundry-theme.ts  package-lock.json  package.json  tailwind.config.ts
web-client/src/: app.html
web_client/: colorscheme.txt  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web_client/src/: app.css  app.html  hooks.server.ts
web_client/static/: grayLogo.png~
web_client/student_client/: package-lock.json  package.json
(+32 files in other folders)
