[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["nnniv <nivroh2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sanic = "^24.6.0"
mysql-connector-python = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
